--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="js/carouselPlugin.js"></script>
-    <script type="text/javascript" src="js/script.js"></script>
+    <script src="js/tmpl.js"></script>
+    <script src="js/script.js"></script>
 </head>
 <body>
 	<div class="carousel">	
@@ -29,6 +30,16 @@
 		</div>
 		<div class="carousel-arrow-right"><span>Вправо</span></div>
 	</div>
+	
+	<div class="template"> <h1>Profile</h1>	
+		<script type="text/template" id="tmpl">
+			<h1><%= name %></h1>
+		</script>
+
+		<div id="wrapper">
+			
+		</div>
+	</div>	
 
 </body>
 </html>
